clubplanet.com (archived on 2002-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;entertainment",
  "char_count": 7231,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.89,
  "homepage_snapshot_redirected_domain": "clubplanet.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020331114457id_/http://www.clubplanet.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020331114457id_/http%3A//clubplanet.com",
  "interval": "2002_A",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "clubplanet.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020604025357id_/http%3A//www.clubplanet.com/aboutus/privacy.asp",
  "policy_title": "Privacy Policy - nightlife privacy",
  "policy_url": "clubplanet.com/aboutus/privacy.asp",
  "sha1": "04e9fff4c34702eef02909bd544471cea1c5d7cf",
  "simhash": 12455757640343008560,
  "simhash_updated": false,
  "site_hostname": "clubplanet.com",
  "site_url": "http://clubplanet.com",
  "smog": 16.16,
  "strict_updated": false,
  "timestamp": "20020604025357",
  "word_count": 1168,
  "year": 2002
}

--- a/c/cl/clu/clubplanet.com.html
+++ b/c/cl/clu/clubplanet.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the clubplanet.com privacy policy that was archived on 2001-12-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011202014259id_/http%3A//www.clubplanet.com/aboutus/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the clubplanet.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604025357id_/http%3A//www.clubplanet.com/aboutus/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Privacy Policy - nightlife privacy </title>
@@ -183,6 +183,28 @@ function validateFields(form)
 }
 </script>
 
+<!-- BEGIN Music Vision Ad Code -->
+<script language="JavaScript">
+	var oldCookie = document.cookie;
+	var number = 0; 
+	if (oldCookie.indexOf("counter=") < 0){
+		number = 1;
+	}else{
+		number = oldCookie.charAt(oldCookie.indexOf("counter=")+ 8);
+		number = parseInt(number) + 1;
+	}
+
+	if (number <= 3){
+		var exp = new Date();
+		var nowPlusOneDay = exp.getTime() + (12 * 60 * 60 * 1000); 
+		exp.setTime(nowPlusOneDay); 
+		window.open('/mv-pop-up3.asp','mv_pop','location=0,menubar=0,toolbar=0,person albar=0,status=0,scrollbars=0,width=250,height=250');
+		document.cookie="counter=" + number + "; expires=" + exp.toGMTString();		
+	}
+
+ </script>
+<!-- END Music Vision Ad Code -->
+
 
 <script language="JavaScript">
 <!-- 
@@ -207,12 +229,12 @@ function Certify() {
 	<a href="/" target="_top"><img src="/images/logo.gif" border="0" alt="clubplanet.com | nightlifestyle"></a>
 	</td>
 	<td width="555" bgcolor="#ffffff" valign="middle" align="right" height="100">
-<script language="JavaScript" src="http://ad.doubleclick.net/adj/C016a.mv/top_banner;!cat=0;dcop=ist;sz=468x60;ord=67758">
-document.write ('<A HREF="http://ad.doubleclick.net/jump/C016a.mv/top_banner;!cat=0;dcop=ist;abr=!ie4;abr=!ie5;abr=!nn2;abr=!nn3;abr=!nn4;dcop=ist;sz=468x60;ord=67758" target="_blank">');
-document.write('<IMG SRC="http://ad.doubleclick.net/ad/C016a.mv/top_banner;!cat=0;dcop=ist;abr=!ie4;abr=!ie5;abr=!nn2;abr=!nn3;abr=!nn4;sz=468x60;ord=67758" border=0 width="length" height="width"></A>');
+<script language="JavaScript" src="http://ad.doubleclick.net/adj/C016a.mv/top_banner;!cat=0;dcop=ist;sz=468x60;ord=80025">
+document.write ('<A HREF="http://ad.doubleclick.net/jump/C016a.mv/top_banner;!cat=0;dcop=ist;abr=!ie4;abr=!ie5;abr=!nn2;abr=!nn3;abr=!nn4;dcop=ist;sz=468x60;ord=80025" target="_blank">');
+document.write('<IMG SRC="http://ad.doubleclick.net/ad/C016a.mv/top_banner;!cat=0;dcop=ist;abr=!ie4;abr=!ie5;abr=!nn2;abr=!nn3;abr=!nn4;sz=468x60;ord=80025" border=0 width="length" height="width"></A>');
 </script>
 <noscript>
-<A HREF="http://ad.doubleclick.net/jump/C016a.mv/top_banner;!cat=0;dcop=ist;sz=468x60;ord=67758" target="_blank"><IMG SRC="http://ad.doubleclick.net/ad/C016a.mv/top_banner;!cat=0;dcop=ist;sz=468x60;ord=67758" border=0 width="468" height="60"></A>
+<A HREF="http://ad.doubleclick.net/jump/C016a.mv/top_banner;!cat=0;dcop=ist;sz=468x60;ord=80025" target="_blank"><IMG SRC="http://ad.doubleclick.net/ad/C016a.mv/top_banner;!cat=0;dcop=ist;sz=468x60;ord=80025" border=0 width="468" height="60"></A>
 </noscript>
 	</td>
 </tr>
@@ -246,7 +268,7 @@ document.write('<IMG SRC="http://ad.doubleclick.net/ad/C016a.mv/top_banner;!cat=
 	<img name="img5" border="0" height="20" width="125" src="/images/image5off.gif" alt="Services - members, promoters, partners, advertisers"></a>
 	</td>
 	<td width="125" align="right" bgcolor="#61a4d3">
-	<a href="http://tickets.clubplanet.com" target="_new" onmouseover="imgOn('img6')" onmouseout="imgOff('img6')">
+	<a href="http://store.yahoo.com/ticketing/" onmouseover="imgOn('img6')" onmouseout="imgOff('img6')">
 	<img name="img6" border="0" height="20" width="125" src="/images/image6off.gif" alt="Library"></a>
 	</td>
 	</tr>
@@ -270,13 +292,16 @@ document.write('<IMG SRC="http://ad.doubleclick.net/ad/C016a.mv/top_banner;!cat=
 				<!-- privacy policy left column -->
 <span class="sm_white">
 At Clubplanet.com, we value your membership and respect your privacy.  Our 
-privacy policy is posted throughout our site for your perusal.  To provide you
+privacy policy is posted throughout our site for your perusal.  
+
+<!--To provide you
 with assurances of our firm commitment to your privacy, we are a Certified 
 Participant of the BBBOnLine® Privacy Program.
 <p></p>
 <div align="center">
-<a href="javascript:Certify();"><img src="/images/privacyseal6.gif" width="90" height="31" border="0" alt="BBB Onlibe Privacy Seal"></a>
+<A HREF="javascript:Certify();"><IMG SRC="/images/privacyseal6.gif" WIDTH=90 HEIGHT=31 BORDER=0 ALT="BBB Onlibe Privacy Seal"></A>
 </div>
+-->
 </span>
 				</td>
 			</tr>
@@ -298,9 +323,9 @@ Participant of the BBBOnLine® Privacy Program.
 				<div align="center">
 	 
 	<br>
-	<a href="http://www.clubplanet.com/banner/banman.asp?Task=Click&amp;ZoneID=30&amp;CampaignID=55&amp;AdvertiserID=3&amp;BannerID=168&amp;SiteID=0&amp;RandomNumber=43088" target="_top"><img src="http://www.clubplanet.com/images/rave_calendar.gif" width="120" height="60" alt="Rave Calendar" border="0"></a>
+	<a href="http://www.clubplanet.com/banner/banman.asp?Task=Click&amp;ZoneID=30&amp;CampaignID=55&amp;AdvertiserID=3&amp;BannerID=168&amp;SiteID=0&amp;RandomNumber=43898" target="_top"><img src="http://www.clubplanet.com/images/rave_calendar.gif" width="120" height="60" alt="Rave Calendar" border="0"></a>
 	<br>
-	<a href="http://www.clubplanet.com/banner/banman.asp?Task=Click&amp;ZoneID=28&amp;CampaignID=116&amp;AdvertiserID=35&amp;BannerID=153&amp;SiteID=0&amp;RandomNumber=86920" target="_top"><img src="http://www.clubplanet.com/ads/images/kmx120x90_club.gif" width="120" height="90" alt="KMX" border="0"></a>
+	<a href="http://www.clubplanet.com/banner/banman.asp?Task=Click&amp;ZoneID=28&amp;CampaignID=62&amp;AdvertiserID=25&amp;BannerID=191&amp;SiteID=0&amp;RandomNumber=31563" target="_new"><img src="http://www.clubplanet.com/ads/images/network/sny_120x60.gif" width="120" height="60" alt="Smart New Yorker" border="0"></a>
 </div>
 
 
@@ -405,10 +430,29 @@ Participant of the BBBOnLine® Privacy Program.
 		given the reasonable opportunity and time to decline.
 	</li></ul>
 	<font size="2">
-	<strong>Other Sites</strong>
+	<strong>Third Party Advertiser's Statement</strong>
 	</font>
 	<p></p>
-	This site contains links to other sites.  <b>Clubplanet.com</b> is not responsible for the 
+	We use DoubleClick and other third-party advertising companies to serve ads 
+	when you visit our Web site. These companies may use information (not 
+	including your name, address, email address or telephone number) about your 
+	visits to this and other Web sites in order to provide advertisements on this 
+	site and other sites about goods and services that may be of interest to you. 
+	If you would like more information about this practice and to know your 
+	choices about not having this information used by these companies, please 
+	<a href="http://www.networkadvertising.org/optout_nonppii.asp">click here</a>.
+	<p></p>
+	<font size="2">
+	<strong>Third Party Cookies</strong>
+	</font>
+	<p></p>
+	In the course of serving advertisements to this site, our third-party 
+	advertiser may place or recognize a unique "cookie" on your browser. 	
+	<p></p>
+	<font size="2">
+	<strong>Other Sites</strong>
+	</font>
+	<p></p>	This site contains links to other sites.  <b>Clubplanet.com</b> is not responsible for the 
 	privacy practices or the content of such Web sites.
 	<p></p>
 			<font face="Verdana,Arial,Helvetica" size="2">
@@ -481,7 +525,7 @@ Participant of the BBBOnLine® Privacy Program.
 	<address>127 West 25th Street, 11th Floor</address>
 	<address>New York, NY 10001</address>
 	<p>
-	</p><address>Voice: 212.242.5155</address>
+	</p><address>Voice: 212.843.2400</address>
 	<address>E-mail: <a href="mailto:webmaster@clubplanet.com">webmaster@clubplanet.com</a></address>
 	<br>&nbsp;
 	
@@ -631,10 +675,12 @@ Participant of the BBBOnLine® Privacy Program.
 	<option value="/content/djprofiles/djprofiles_archive.asp">DJ Profiles</option>
 	<option value="/content/features/features_archive.asp">Features</option>
 	<option value="/content/gettingpissed/gettingpissed_archive.asp">Gettin Pissed</option>
-	<option value="/content/musicnews/musicnews_archive.asp">Music News</option>
+	<!--<option value="/content/musicnews/musicnews_archive.asp">Music News</option>-->
 	<!--<option value="/content/looselips/looselips_archive.asp">Loose Lips</option>	<option value="/content/rantsraves/rantsraves_archive.asp">Rants &amp; Raves</option>	<option value="/content/thescenesters/scenester_archive.asp">The Scenesters</option>	<option value="/content/velvetropeburns/velvetropeburns_archive.asp">Velvet Rope Burns</option>-->
 	<option value="/">...........................</option>
 	<!--<option value="/mail/">Free E-Mail</option>-->
+	<option value="http://bbs.clubplanet.com/">Message Boards</option>
+	<option value="http://photos.clubplanet.com">Photo Gallery</option>
 	<option value="http://bbs.clubplanet.com/calendar.php">Club Calendar</option>
 	<option value="javascript:openAnyWindow('/misc/vibeselector/vs2.html','VibeSelector',545,172);">Vibe Selector</option>
 	<option value="/misc/360gallery/">360 Gallery</option>
@@ -647,6 +693,7 @@ Participant of the BBBOnLine® Privacy Program.
 	<option value="/membership/lostpassword.asp">Lost Password</option>
 	<option value="/membership/unsubscribe.asp">Unsubscribe</option>
 	<option value="/">...........................</option>
+	<option value="http://store.yahoo.com/ticketing/">Ticket Booth</option>  
 	<option value="javascript:NewWindow('/bodega/','ratings',616,525);">Clubplanet Store</option>
 	<option value="/aboutus/media/">Media Kit</option>   
 	</select>
@@ -660,12 +707,13 @@ Participant of the BBBOnLine® Privacy Program.
 		<!-- BEGIN right column ads -->
 	<div align="center">
 	<!-- include virtual="/banner/zones/banmanzone59.asp"-->
-	<!-- put these back on 10/1/01 -->
-	<a href="http://www.clubplanet.com/banner/banman.asp?Task=Click&amp;ZoneID=27&amp;CampaignID=102&amp;AdvertiserID=3&amp;BannerID=136&amp;SiteID=0&amp;RandomNumber=74145" target="_top"><img src="http://www.clubplanet.com/ads/images/clubplanet/120x60_email.gif" width="120" height="60" alt="Get FREE Clubplanet Email!" border="0"></a>
+	<a href="http://www.clubplanet.com/banner/banman.asp?Task=Click&amp;ZoneID=35&amp;CampaignID=133&amp;AdvertiserID=40&amp;BannerID=182&amp;SiteID=0&amp;RandomNumber=37071" target="_new"><img src="http://www.clubplanet.com/ads/images/120x90_ibiza2002.gif" width="120" height="90" alt="Ibiza 2002" border="0"></a>
 	<br>
-	<a href="http://www.clubplanet.com/banner/banman.asp?Task=Click&amp;ZoneID=28&amp;CampaignID=57&amp;AdvertiserID=22&amp;BannerID=70&amp;SiteID=0&amp;RandomNumber=99255" target="_new"><img src="http://beta3.clubplanet.com/ads/images/120x60_upoc4.gif" width="120" height="60" alt="Get Clubplanet.com updates on your cell phone" border="0"></a>
+	<a href="http://www.clubplanet.com/banner/banman.asp?Task=Click&amp;ZoneID=27&amp;CampaignID=132&amp;AdvertiserID=39&amp;BannerID=181&amp;SiteID=0&amp;RandomNumber=62181" target="_top"><img src="http://www.clubplanet.com/ads/images/120x90_prom.gif" width="120" height="90" alt="Prom Parties" border="0"></a>
 	<br>
-	<a href="http://www.clubplanet.com/banner/banman.asp?Task=Click&amp;ZoneID=29&amp;CampaignID=95&amp;AdvertiserID=3&amp;BannerID=126&amp;SiteID=0&amp;RandomNumber=12030" target="_top"><img src="http://www.clubplanet.com/ads/images/clubplanet/newyearseve_120x90.gif" width="120" height="90" alt="New Year's Eve Party Central" border="0"></a>
+	<a href="http://www.clubplanet.com/banner/banman.asp?Task=Click&amp;ZoneID=28&amp;CampaignID=62&amp;AdvertiserID=25&amp;BannerID=191&amp;SiteID=0&amp;RandomNumber=49846" target="_new"><img src="http://www.clubplanet.com/ads/images/network/sny_120x60.gif" width="120" height="60" alt="Smart New Yorker" border="0"></a>
+	<br>
+	<a href="http://www.clubplanet.com/banner/banman.asp?Task=Click&amp;ZoneID=29&amp;CampaignID=135&amp;AdvertiserID=3&amp;BannerID=184&amp;SiteID=0&amp;RandomNumber=97429" target="_new"><img src="http://www.clubplanet.com/ads/images/120x90_mixer.gif" width="120" height="90" alt="Mixer Magazine" border="0"></a>
 	</div>
 <!-- END right column ads -->
 		</td>
@@ -701,17 +749,16 @@ Participant of the BBBOnLine® Privacy Program.
 </p>
 
 <span class="footer">
-copyright © 2001 clubplanet.com, inc. all rights reserved.
+copyright © 2002 clubplanet.com, inc. all rights reserved.
 <br>
 email: <a href="mailto:info@clubplanet.com" class="footer">info@clubplanet.com</a> | 
-phone: 212.242.5155 | 
+phone: 212.843.2400 | 
 fax: 212.202.3657
 </span>
 <p>&nbsp;</p>
 <!-- include virtual="/banner/zones/banmanzone57.asp"-->
-<script language="JavaScript" src="http://ad.doubleclick.net/adj/C016a.mv/top_banner;!cat=0;sz=1x1;ord=3375328?">
+<script language="JavaScript" src="http://ad.doubleclick.net/adj/C016a.mv/top_banner;!cat=0;pid=1;sz=1x1;ord=3375328?">
 </script>
-
 </td>
 </tr>
 </tbody></table>
