--- a/i/is/isl/isleofman.com.html
+++ b/i/is/isl/isleofman.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the isleofman.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201173014id_/http%3A//isleofman.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the isleofman.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604025416id_/http%3A//isleofman.com/privacy.htm) for the most accurate reproduction.-->
 
-<html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Isle of Man - Privacy Policy</title>
 <link rel="stylesheet" type="text/css" href="/style.css">
 
@@ -17,20 +17,25 @@
 
 
 <!-- begin header -->
-<table width="600" border="0" cellpadding="3" cellspacing="0">
-	<tbody><tr>
-		<td colspan="2" valign="top">
-		<a href="/"><img src="/images/top_welcome.gif" alt="welcome to the Isle of Man" width="419" height="40" border="0"></a>
+<table cellpadding="0" cellspacing="0" border="0" width="600" height="69">
+	<tbody><tr height="44">
+		<td colspan="2">
+			<a href="/"><img src="/images/welcome2002.gif" alt="welcome to the Isle of Man" width="492" height="44" border="0" align="middle"></a>
+			<img src="/images/front_images/spacer.gif" width="1" height="44" align="middle">
 		</td>
 	</tr>
-	<tr>
-		<td width="50" height="24" class="leftnav">&nbsp;</td>
-		<td width="550" height="24" valign="top"><nobr>
-		<a href="/"><img src="/images/top_home.gif" align="top" alt="isleofman.com home" width="48" height="24" border="0"></a> 
-		<a href="/map/"><img src="/images/top_islandmap.gif" align="top" alt="Isle of Man map" width="93" height="24" border="0"></a> 
-		<a href="/contactus/"><img src="/images/top_contactus.gif" align="top" alt="contact us" width="90" height="24" border="0"></a> 
-		<a href="/search/index.asp"><img src="/images/top_search.gif" align="top" alt="search the Isle of Man" width="60" height="24" border="0"></a>
-		</nobr>
+	<tr height="25">
+		<td width="107">
+			<img src="/images/front_images/spacer.gif" width="107" height="25">
+		</td>
+		<td width="493">
+			<nobr>
+			&nbsp;&nbsp;&nbsp;<a href="/"><img src="/images/top_home2002.gif" alt="isleofman.com home" width="57" height="25" border="0" align="middle"></a> 
+			<a href="/map/"><img src="/images/top_islandmap2002.gif" alt="Isle of Man map" width="106" height="25" border="0" align="middle"></a> 
+			<a href="/contactus/"><img src="/images/top_contactus2002.gif" alt="contact us" width="101" height="25" border="0" align="middle"></a> 
+			<a href="/search/index.asp"><img src="/images/top_search2002.gif" alt="search the Isle of Man" width="68" height="25" border="0" align="middle"></a>
+			</nobr><br>
+			<img src="/images/front_images/spacer.gif" width="1" height="6">
 		</td>
 	</tr>
 </tbody></table>
@@ -42,32 +47,23 @@
 		<td valign="top" width="130" class="leftnav" rowspan="2">
 			<!-- begin left navigation -->
 <nobr>
-	<a href="/about/" class="menuitem">About the<br>Isle of Man</a>
-	<hr width="100%" size="1">
-	<a href="/travel/" class="menuitem">How to get here</a>
-	<hr width="100%" size="1">
-	<a href="/accommodation/" class="menuitem">Where to stay</a>
-	<hr width="100%" size="1">
-   	<a href="/gettingaround/" class="menuitem">Getting around</a> 
-   	<hr width="100%" size="1">
-	<a href="/whattodo/" class="menuitem">What to do</a>
-	<hr width="100%" size="1">
-	<a href="/whatson/" class="menuitem">What's on</a>
-	<hr width="100%" size="1">
-	<a href="/tourisminfo/" class="menuitem">Tourism<br>information</a>
-	<hr width="100%" size="1">
-	<a href="/news/" class="menuitem">Island news</a>
-	<hr width="100%" size="1">
-	<a href="/factfile/" class="menuitem">Island factfile</a>
-	<hr width="100%" size="1">
-	<a href="/directory/" class="menuitem">Directory</a>
-</nobr><nobr>
+	<a href="/about/" title="About the Isle of Man" class="menuitem">About the<br>Isle of Man</a><br><br>
+	<a href="/travel/" title="How to get here" class="menuitem">Travel to the<br>Isle of Man</a><br><br>
+	<a href="/accommodation/" title="Where to stay" class="menuitem">Where to stay</a><br><br>
+	<a href="/gettingaround/" title="Getting around" class="menuitem">Getting around</a><br><br>
+	<a href="/whattodo/" title="What to do" class="menuitem">What to do</a><br><br>
+	<a href="/whatson/" title="What's on in the Isle of Man" class="menuitem">What's on</a><br><br>
+	<a href="/tourisminfo/" title="Tourist information" class="menuitem">Tourism<br>information</a><br><br>
+	<a href="/news/" title="Island News" class="menuitem">Island news</a><br><br>
+	<a href="/factfile/" title="Factfile about the Isle of Man" class="menuitem">Island factfile</a>
+</nobr>
 <!-- end left navigation -->
-		</nobr></td>
+		</td>
 		<td valign="top" class="bodyhead" colspan="2">
-			<p><img src="/images/factfile_header.jpg" alt="Eary Cushlin by Isle of Man Department of Tourism and Lily Publications" class="headerimage">
+			<p><img src="/images/farming_dk_header.jpg" alt="Farming at Cregneash by Dan Karran" class="headerimage">
 
-			</p><div class="sectionhead">privacy policy</div>
+			
+      </p><div class="sectionhead">Privacy policy</div>
 
 		</td>
 	</tr>
@@ -76,11 +72,14 @@
 		<td valign="top" class="bodycontent">
 			<p>This is our privacy policy and aims to explain what information we collect and what it is used for. If you have any questions or concerns regarding this statement please email us at <a href="mailto:information@isleofman.com">information@isleofman.com</a>
 
-			</p><p>We use the personal data you may provide solely for the reason that caused you to do so.  For example, if you requested a brochure and submitted your name and address we will use that data for that purpose only and no other.  We do not retain that information, or sell it or pass it to others.
+			</p><p>We use the personal data you may provide solely for the reason that caused you to do so.  For example, if you requested a brochure and submitted your name and address we will use that data for that purpose only and no other.  We do not sell or pass that information on to further parties.
 
-			</p><p>We also use cookies to provide us with visitor and user statistics but that does not identify you as a person.
-
-		</p></td>
+			
+      </p><p>We also use cookies to provide us with visitor and user statistics but 
+        that does not identify you as a person. 
+      </p><p><img src="/images/odpr_sml.gif" align="left" alt="ODPR"><i>isleofman.com</i> is registered with the <a href="http://www.gov.im/odpr/" target="_blank">Office of the Data Protection 
+        Registrar</a>.
+    </p></td>
 		<td valign="top" class="rightnav">
 			
 		</td>
@@ -91,30 +90,18 @@
 <!-- begin footer -->
 <table width="100%" cellspacing="0" cellpadding="0">
 	<tbody><tr>
-		<td class="leftnav">&nbsp;</td>
-		<td align="right"><nobr>
-		<a href="/"><img src="/images/top_home.gif" align="top" alt="home" width="48" height="24" border="0"></a> 
-		<a href="/map/"><img src="/images/top_islandmap.gif" align="top" alt="island map" width="93" height="24" border="0"></a> 
-		<a href="/contactus/"><img src="/images/top_contactus.gif" align="top" alt="contact us" width="90" height="24" border="0"></a> 
-		<a href="/search/index.asp"><img src="/images/top_search.gif" align="top" alt="search" width="60" height="24" border="0"></a>
-		</nobr>
+		<td align="right">
+			<br><a href="/"><img src="/images/theultimatedest2002.gif" alt="the ultimate destination - isleofman.com" width="499" height="30" border="0"></a>
 		</td>
 	</tr>
 	<tr>
-		<td colspan="2">
-			<table width="100%" cellpadding="0" cellspacing="0" border="0">
-				<tbody><tr>
-					<td width="80%"><br><hr size="1" class="amazing" width="100%"></td>
-					<td width="200" class="amazing">
-						<img src="/images/neverceases.gif" alt="never ceases to amaze">
-					</td>
-				</tr>
-				<tr>
-					<td colspan="2" class="isleofman">
-						<a href="/"><img src="/images/isleofmancom.gif" alt="isleofman.com" border="0"></a>
-					</td>
-				</tr>
-			</tbody></table>
+		<td align="right">
+			<nobr>
+			<a href="/"><img src="/images/top_home2002.gif" alt="isleofman.com home" width="57" height="25" border="0" align="middle"></a> 
+			<a href="/map/"><img src="/images/top_islandmap2002.gif" alt="Isle of Man map" width="106" height="25" border="0" align="middle"></a> 
+			<a href="/contactus/"><img src="/images/top_contactus2002.gif" alt="contact us" width="101" height="25" border="0" align="middle"></a> 
+			<a href="/search/index.asp"><img src="/images/top_search2002.gif" alt="search the Isle of Man" width="68" height="25" border="0" align="middle"></a>
+			</nobr>
 		</td>
 	</tr>
 </tbody></table>
