pfizer.com (archived on 2002-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 1829,
  "classifier_probability": 0.84,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.44,
  "homepage_snapshot_redirected_domain": "pfizer.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020222232230id_/http://www.pfizer.com/main.html",
  "homepage_snapshot_url": "https://web.archive.org/web/20020402044212id_/http%3A//pfizer.com",
  "interval": "2002_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "pfizer.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020604030031id_/http%3A//www.pfizer.com/privacyfrm.html",
  "policy_title": "Pfizer Inc: Internet Privacy Policy",
  "policy_url": "pfizer.com/privacyfrm.html",
  "sha1": "7062076c29cae512cb3c9137f5b21a37ebaaff38",
  "simhash": 17504868633371960241,
  "simhash_updated": false,
  "site_hostname": "pfizer.com",
  "site_url": "http://pfizer.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20020604030031",
  "word_count": 296,
  "year": 2002
}

--- a/p/pf/pfi/pfizer.com.html
+++ b/p/pf/pfi/pfizer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pfizer.com privacy policy that was archived on 2001-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011212000620id_/http%3A//www.pfizer.com/privacyfrm.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pfizer.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604030031id_/http%3A//www.pfizer.com/privacyfrm.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -215,7 +215,8 @@ bot="ImageMap" i-checksum="23825" endspan --> <br>
   <table border="0" width="75%">
     <tbody><tr> 
       <td width="100">&nbsp;</td>
-      <td><a href="/copyrightfrm.html" target="_top"><font size="1">Copyright © 1997, 1998, 1999, 2000, 2001 Pfizer Inc. All rights reserved.</font></a></td>
+      <td><a href="/copyrightfrm.html" target="_top"><font size="1">Copyright © 1997, 1998, 1999, 2000, 2001, 2002 Pfizer Inc. All rights 
+        reserved.</font></a></td>
     </tr>
   </tbody></table>
 </div>
