--- a/a/am/ame/americanmeadows.com.html
+++ b/a/am/ame/americanmeadows.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the americanmeadows.com privacy policy that was archived on 2001-08-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010826202516id_/http%3A//americanmeadows.com/priv_security.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the americanmeadows.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604031337id_/http%3A//americanmeadows.com/priv_security.cfm) for the most accurate reproduction.-->
 
 <html><head>
 	<title>American Meadows - New privacy and Security Statement</title>
@@ -21,10 +21,10 @@
 		<td><img src="images/basket_top.gif" border="0"></td>
 	</tr>
 	<tr>
-	<td background="images/basket_mid.gif" align="RIGHT">
+	<td background="images/basket_mid.gif" align="RIGHT" nowrap="">
 	<font face="MS Sans Serif, Helvetica" size="1" color="Maroon">
 	
-	 	<nobr>(empty)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</nobr>
+	 	(empty)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	
 	</font>
 	</td>
@@ -77,7 +77,7 @@ Privacy and Security Statements
 <font face="Arial,Times New Roman, Times, serif" size="2">We at American Meadows have been selling only the finest, freshest seed for over 20 years.  Our retail location, The Vermont Wildflower Farm, was founded in 1981, so we are veteran retailers, and have a healthy respect for customer service, privacy and security, whether a sale is made in person or on the internet.  (If you'd prefer to order by phone, fax, or mail, go to <a href="howto.cfm">How to Order</a>.)
 <br><p>
 </p><p><b>Security for your order OnLine.</b>  We understand that many customers have concerns about using their credit cards online, and we have invested in the finest security programming for our website to assure you. 
-<br></p><p><img src="images/cc_logo.gif" border="0" align="baseline">&nbsp;    When you order from this website, your credit card transaction is handled by a completely secure shopping cart program created by a company called CyberCash.  This is the same security software used by some of the internet's largest and most successful sites.  CyberCash handles approximately 10 million internet transactions per month for over 26,000 merchants.  Internet leaders who use CyberCash include Sprint, H&amp;R Block, Motorola, and Dell Computers. 
+<br></p><p><img src="images/cc_logo.gif" border="0" align="baseline">&nbsp;    When you order from this website, your credit card transaction is handled by a completely secure shopping cart program created by a company called CyberCash, a division of Verisign, Inc.  This is the same security software used by some of the internet's largest and most successful sites.  CyberCash handles approximately 10 million internet transactions per month for over 26,000 merchants.  Internet leaders who use CyberCash include Sprint, H&amp;R Block, Motorola, and Dell Computers. 
 <br></p><p>
 Once your order is filled, your credit card number is deleted from our records, and not stored. 
 
@@ -88,10 +88,11 @@ Once your order is filled, your credit card number is deleted from our records, 
 We do not sell or rent your name and address information to any other company. 
 <br></p><p>
 If you supply us your postal address, email address or phone, you may receive periodic contacts from us with information on new products, special prices or upcoming events.  If you do not wish to receive such contacts, please let us know by sending a message to our Customer Service Department via email at
-<a href="mailto:customerservice@americanmeadows.com">customerservice@americanmeadows.com</a> or call us at (802)985-9455, ext. 0
+<a href="mailto:customerservice@americanmeadows.com">customerservice@americanmeadows.com</a> or call us at (802) 951-5812, ext. 0
 </p></font></td>
 </tr>
 </tbody></table>
+<script type="text/javascript" language="JavaScript" src="http://www.americanmeadows.com/include/wt.js"></script>
 
 
 </body></html>
