--- a/d/dr/drs/drscholls.com.html
+++ b/d/dr/drs/drscholls.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the drscholls.com privacy policy that was archived on 2001-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011205051711id_/http%3A//drscholls.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the drscholls.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604031704id_/http%3A//www.drscholls.com/privacy.html) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/newbase.dwt" --><head>
 <!-- #BeginEditable "doctitle" --> 
@@ -41,7 +41,7 @@ function MM_swapImage() { //v3.0
 	<td bgcolor="#FFCC00" align="center"><a href="problem.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('problem','','0images/nav_problem_over.gif',1)"><img name="problem" border="0" src="0images/nav_problem.gif" width="91" height="61" alt="Got a Problem?"></a><a href="product.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('product','','0images/nav_product_over.gif',1)"><img name="product" border="0" src="0images/nav_product.gif" width="92" height="61" alt="Find a Product!"></a><a href="where.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tobuy','','0images/nav_tobuy_over.gif',1)"><img name="tobuy" border="0" src="0images/nav_tobuy.gif" width="89" height="61" alt="Where to Buy!"></a><a href="whatsnew.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('new','','0images/nav_new_over.gif',1)"><img name="new" border="0" src="0images/nav_new.gif" width="83" height="61" alt="Whats New?"></a></td>
 	<td width="1"><img src="0images/pic.gif" width="1" height="61"></td></tr>
 <tr>
-	<td rowspan="2"><a href="http://www.drscholls.com/crm.html"><img src="0images/banner_personal.gif" width="518" height="68" border="0"></a></td>
+	<td rowspan="2"><a href="ecrmpp.htm" target="_blank"><img src="0images/banner_personal.gif" width="518" height="68" border="0"></a></td>
 	<td><img src="0images/pic.gif" width="1" height="24"></td></tr>
 <tr>
 	<td bgcolor="#FFCC00" width="142" align="right" valign="bottom" nowrap=""> 
