--- a/w/wh/who/whole-dog-journal.com.html
+++ b/w/wh/who/whole-dog-journal.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the whole-dog-journal.com privacy policy that was archived on 2001-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011204210028id_/http%3A//www.belvoir.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the whole-dog-journal.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604032255id_/http%3A//www.belvoir.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Belvoir -Privacy Page</title>
@@ -83,7 +83,8 @@
             <font color="#003399"><b>We do not share email addresses or telephone 
             numbers with other organizations. </b></font><br>
             <font color="#003399"><br>
-            <b>We Do Not Set Any Cookies. </b></font><br>
+            <b>Cookies and How They are Used</b></font><br>
+			Cookies are tiny pieces of information stored by your browser on your computer's hard drive.  Cookies are set when "Shopping Cart" is in use. This allows us to keep track of your current transaction during the order taking process. We use cookies for Shopping Cart, but we do not store personally identifiable information in your cookie.<br>
             <b><br>
             <font color="#003399">Changes </font></b><br>
             From time to time, we may use customer information for new, unanticipated 
@@ -125,7 +126,7 @@
             policy, you may contact us at the above address or phone number.</b> 
             </font></font><font size="2"><br>
             </font></p>
-          <p align="center"><font size="2"> Updated 5/24/01 </font></p>
+          <p align="center"><font size="2"> Updated 1/29/02 </font></p>
         </div>
       </div>
       
