--- a/s/sb/sbn/sbn.com.html
+++ b/s/sb/sbn/sbn.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sbn.com privacy policy that was archived on 2001-11-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011108063010id_/http%3A//www.sbn.com/company/privpolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sbn.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604032347id_/http%3A//sbn.com/company/privpolicy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>SBN.com Privacy Policy</title>
