--- a/n/ni/nim/nimble.com.html
+++ b/n/ni/nim/nimble.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the nimble.com privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217141902id_/http%3A//nimble.com/legal/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nimble.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604032620id_/http%3A//www.nimble.com/legal/privacy) for the most accurate reproduction.-->
 
 <html><head>
-  <meta content="Data integration, Query, XML, Web services, Real-time, Virtual database, Virtual data warehouse, Data warehouse, Data mart, Database, Distributed query, Reporting, XML data, XQuery, EAI, Enterprise application integration, Enterprise information portal, EIP, Information, Application development, Application integration, Nimble, Data managment, Application server, Hierarchical data, Flat file, Legacy data, Query Engine, Server, Semistructured data, SOAP, UDDI, WDSL, XML/QL, XSLT" name="keywords">
-  <meta content=" The Nimble Integration Suite is an XML-based data integration platform used to build Web Services and applications." name="description">
-  <title>Nimble Technology: Privacy Policy</title>
+  <meta name="keywords" content="Data integration, Query, XML, Web services, Real-time, Virtual database, Virtual data warehouse, Data warehouse, Data mart, Database, Distributed query, Reporting, XML data, XQuery, EAI, Enterprise application integration, Enterprise information portal, EIP, Information, Application development, Application integration, Nimble, Data managment, Application server, Hierarchical data, Flat file, Legacy data, Query Engine, Server, Semistructured data, SOAP, UDDI, WDSL, XML/QL, XSLT">
+  <meta name="description" content="The Nimble Integration Suite is an XML-based data integration platform used to build Web Services and applications.">
+  <title>Nimble Technology: Privacy Policy - provides XML data integration software for real-time unified views of database, data warehouse, and unstructured sources. Create enterprise information portals, business intelligence and other applications.</title>
   <link href="/insert/main.css" type="text/css" rel="stylesheet">
   <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 </head>
@@ -58,8 +58,8 @@
   <td colspan="6" height="10" width="100%"><img border="0" height="10" width="1" src="spacer.gif"></td>
 </tr>
 <tr>
-  <td valign="top">
-    <table cellspacing="0" border="0">
+  <td valign="top"><img border="0" height="27" width="1" src="spacer.gif">
+		    <table cellspacing="0" border="0">
     <tbody><tr>
       <td height="8">
         <spacer width="2" height="8" type="block"></spacer>
@@ -137,7 +137,7 @@ If you have any questions or concerns about this Privacy Policy or how your pers
       </td>
     </tr>
     <tr>
-      <td class="copyright">Nimble Technology, Inc.  All rights reserved.</td>
+      <td class="copyright">Copyright © 1999 - 2002 Nimble Technology, Inc.  All rights reserved.</td>
       <td class="copyright"> | 
       </td>
       <td class="copyright"><a class="copyright" href="/legal/terms/">Terms of Use</a></td>
