astrologyzone.com (archived on 2002-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "entertainment",
  "char_count": 2335,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.79,
  "homepage_snapshot_redirected_domain": "astrologyzone.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020331053122id_/http://www.astrologyzone.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020331053122id_/http%3A//astrologyzone.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "astrologyzone.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020604032939id_/http%3A//www.astrologyzone.com/privacy.html",
  "policy_title": "Astrology Zone",
  "policy_url": "astrologyzone.com/privacy.html",
  "sha1": "a958a597e65b74195e87240d22b7b913361cf8c3",
  "simhash": 10299707618018145954,
  "simhash_updated": false,
  "site_hostname": "astrologyzone.com",
  "site_url": "http://astrologyzone.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20020604032939",
  "word_count": 374,
  "year": 2002
}

--- a/a/as/ast/astrologyzone.com.html
+++ b/a/as/ast/astrologyzone.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the astrologyzone.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201094141id_/http%3A//www.astrologyzone.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the astrologyzone.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604032939id_/http%3A//www.astrologyzone.com/privacy.html) for the most accurate reproduction.-->
 
 <html><!-- meta tags --><head><meta name="description" content="Susan Miller's Astrology Zone is the place to get your horoscopes. Also, a great way to find matchmaking tips, lifestyle guides, and astrological trends.">
 <meta name="keywords" content="birthday, compatibility, matchmaking, new age, entertainment, fun, fortune teller, online, psychic, rising sign, saturn return, solar returns, stars, star sign, love, passion, forecast, orb, equinoxes, prediction, retrograde, alignment, transit, houses, ruling planet, mutual reception, mutable, free astrology, free horoscopes, daily horoscope, weekly horoscope, monthly horoscope, yearly horoscope, aries, taurus, gemini, cancer,  leo, virgo, libra, scorpio, sagittarius, capricorn, aquarius, pisces, horoscope.com, astrologyzone, horoscope, horoscopes, love horoscope, daily horoscopes, weekly horoscopes, monthly horoscopes, yearly horoscopes, zodiac, zodiac signs, astrology zone, astrology, free horoscope, matchmaker, seduction, relationship, couple, stress, fitness, gifts, vacation, travel, susan miller, linda black, www.astrologyzone.com, free, horoscope, horoscopes">
@@ -9,7 +9,7 @@
 
 <title>Astrology Zone</title></head>
 
-<body bgcolor="#000000" text="#000000" link="#551A8B" alink="#996699" vlink="#996699" leftmargin="0" topmargin="0" marginheight="0" marginwidth="0">
+<body bgcolor="#000000" text="#000000" link="#9966FF" alink="#009966" vlink="#0099FF" leftmargin="0" topmargin="0" marginheight="0" marginwidth="0">
 <font face="arial,helvetica,sans-serif" size="1">
 
 
@@ -46,14 +46,8 @@
 			<table height="*" width="150" bgcolor="#000000" cellpadding="0" cellspacing="0" border="0">
 				<tbody><tr>
 					<td bgcolor="#000000" align="center" valign="top">
-						<br>
-						<br>
-						<br>
 						<font face="Arial, Helvetica" size="1" color="FFFFFF">
-							<a href="http://service.bfast.com/bfast/click?bfmid=2181&amp;sourceid=31228343&amp;bfpid=0446524344&amp;bfmtype=book">
-							<img src="/images/miller_book.gif" border="0">
-							<br><font color="FFFFFF">
-							<b>Buy Susan's Book!</b></font></a><br><br><br>
+			<br><a href="https://cgi.timeinc.net/cgi-bin/magsubs/cc/subs/rsextcc?EFFORTKEY=SMAFZK3"><img src="/images/bn_1osman_9.gif"></a><br><br><a href="/bn_sell.html"><img src="/images/year_ahead_sm.jpg" border="0"><br><font color="FFFFFF"><b>Buy Susan's New Book</b></font></a><font color="FFFFFF"><b><br><br><a href="http://216.240.153.150/redirector.php?trva=mph&amp;rurl=www.mypersonalhoroscope.com"><img src="/images/mph_adult.gif" border="0"><br>Order a custom horoscope report all about you -<br> in a hardcover book.</a><br><br></b></font><br><br><br>
 							<a href="http://216.240.153.150/az/PrinterFormat.php">View a Printer-Friendly version of this page</a><br><br><br><br><br>
 <font size="1">Hosted by:<br><a href="http://www.dreamhost.com/rewards.cgi"><img src="http://www.dreamhost.com/images/rewards/88_6.gif" border="0"></a><br>
 					</font></font></td>
@@ -107,7 +101,7 @@ If you have any specific questions, please email <a href="mailto:webmaster@astro
 			<!-- copyright statement -->
 			<td align="center" valign="bottom" height="50%">
 			<font face="verdana" size="1">
-			©Copyright 2001 Susan Miller Omni Media<br>
+			©Copyright 2002 Susan Miller Omni Media<br>
 			<a href="/siteusage.html">Site Usage Agreement</a> | <a href="/privacy.html">Privacy Policy</a><br>
 			<br>
 			</font></td>
