studyabroad.com (archived on 2002-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 10041,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.32,
  "homepage_snapshot_redirected_domain": "studyabroad.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020401175511id_/http://www.studyabroad.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020401175511id_/http%3A//studyabroad.com",
  "interval": "2002_A",
  "link_text": "Studyabroad.com Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "studyabroad.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020604033009id_/http%3A//www.studyabroad.com/privacy.html",
  "policy_title": "Studyabroad.com Privacy Policy",
  "policy_url": "studyabroad.com/privacy.html",
  "sha1": "e26d5fc96ece4a138cc91e78e5f49bf9510b89c9",
  "simhash": 18374422164860960150,
  "simhash_updated": true,
  "site_hostname": "studyabroad.com",
  "site_url": "http://studyabroad.com",
  "smog": 15.69,
  "strict_updated": true,
  "timestamp": "20020604033009",
  "word_count": 1615,
  "year": 2002
}

--- a/s/st/stu/studyabroad.com.html
+++ b/s/st/stu/studyabroad.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the studyabroad.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201165947id_/http%3A//www.studyabroad.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the studyabroad.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604033009id_/http%3A//www.studyabroad.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head><title>Studyabroad.com Privacy Policy</title> </head> <body bgcolor="#ffffff" link="#3131CE" vlink="#3131CE" text="#3131CE">
 <font face="arial, helvetica">
@@ -85,46 +85,35 @@ Educational Directories Unlimited, Inc. reserves the right to modify or suppleme
 
 
 </font></td></tr></tbody></table></center>
-<center>
+</font><center><font face="arial, helvetica">
 
 
 
 
- <hr>
-    
-    Navigate Studyabroad.com: <br>
-  <a href="http://www.studyabroad.com/"><font face="arial, helvetica,
-sans-serif size='-1'" color="#3131CE">Home</font></a>
-  | <a href="http://www.studyabroad.com/menu.html"><font face="arial,
-helvetica, sans-serif size='-1'" color="#3131CE">Site Menu</font></a>
-  |  <a href="http://www.studyabroad.com/portal_menu.html"><font face="arial, helvetica, sans-serif size='-1'" color="#3131CE">Program
-Search</font></a> 
-  |  <a href="http://www.studyabroad.com/aboutstudyabroad.com.html"><font face="arial, helvetica, sans-serif size='-1'" color="#3131CE">Contact
-Us</font></a> 
+<hr>
+  </font><center><font face="arial, helvetica">  
+  <a href="http://www.studyabroad.com/"><font face="arial, helvetica, sans-serif size='-1'" color="#3131CE">Home</font></a> 
+  | <a href="http://www.studyabroad.com/menu.html"><font face="arial, helvetica, sans-serif size='-1'" color="#3131CE">Site Menu</font></a> 
+  |  <a href="http://www.studyabroad.com/portal_menu.html"><font face="arial, helvetica, sans-serif size='-1'" color="#3131CE">Program Search</font></a>
 <br>
- <a href="http://www.studyabroad.com/handbook/handbook.html"><font face="Arial, Helvetica, sans-serif" helvetica,="helvetica," sans-serif="sans-serif" color="#3131CE">Handbook</font></a>
-  | <a href="http://www.studyabroad.com/forum/"><font face="arial,
-helvetica, sans-serif size='-1'" color="#3131CE">Forum</font></a>
-  | <a href="http://www.studyabroad.com/marketplace/"><font face="arial,
-helvetica, sans-serif size='-1'" color="#3131CE">Marketplace</font></a>
-  | <a href="http://www.studyabroad.com/express/"><font face="arial,
-helvetica, sans-serif size='-1'" color="#3131CE"><i>Express!</i></font></a>
-  | <a href="http://www.studyabroad.com/os/travelagency.html"><font face="arial, helvetica, sans-serif size='-1'" color="#3131CE">Discount
-  Airfare</font></a>
-  <br>
-  <a href="http://www.internationaleducationweek.com"> Visit
-InternationalEducationWeek.com </a> |  <a href="http://www.studyabroad.com/sweepslondon/"> Win a trip to London! </a>
-  <hr width="75%">
+ <a href="http://saprofile.studentprospector.com"><font face="Arial, Helvetica, sans-serif" helvetica,="helvetica," sans-serif="sans-serif" color="#3131CE">Student Info</font></a> | <a href="http://www.studyabroad.com/advisors/"><font face="Arial, Helvetica, sans-serif" helvetica,="helvetica," sans-serif="sans-serif" color="#3131CE">Advisor Info</font></a> | <a href="http://www.studyabroad.com/showoffyour.html"><font face="Arial, Helvetica, sans-serif" helvetica,="helvetica," sans-serif="sans-serif" color="#3131CE">Advertiser Info</font></a> | <a href="http://www.studyabroad.com/aboutstudyabroad.com.html"><font face="Arial, Helvetica, sans-serif" helvetica,="helvetica," sans-serif="sans-serif" color="#3131CE">Contact Info</font></a>
+ <br>
+ <a href="http://www.studyabroad.com/handbook/handbook.html"><font face="Arial, Helvetica, sans-serif" helvetica,="helvetica," sans-serif="sans-serif" color="#3131CE">Student Guide</font></a> | <a href="http://www.studyabroad.com/InfoCentre/"><font face="arial, helvetica, sans-serif size='-1'" color="#3131CE">Information Centre</font></a> 
+  | <a href="http://www.studyabroad.com/travelessentials/"><font face="arial, helvetica, sans-serif size='-1'" color="#3131CE">Travel Essentials</font></a>  
+  | <a href="http://www.studyabroad.com/os/travelagency.html"><font face="arial, helvetica, sans-serif size='-1'" color="#3131CE">Discount 
+  Airfare</font></a> 
+  <p>
+<font face="Arial, Helvetica, sans-serif" size="2">Sign up to receive Studyabroad.com <i>EXPRESS!</i> A free weekly newsletter, <i>Express!</i> will deliver only the best study abroad program information,<br>special offers, financial aid information, travel announcements and study abroad deals! 
+</font></p><center><form action="http://www.edudirectories.com/mailflx/express_sab.flx" method="post"><font face="Arial, Helvetica, sans-serif" size="2"><font size="3" color="#000000"><b>Enter E-mail address to Subscribe!!!</b></font> <input type="text" name="email"><input type="hidden" name="backto" value="http://www.studyabroad.com/express/">
+<input type="submit" value="Subscribe"></font></form>
 
-  <p align="center"><font face="arial, helvetica"><b><a href="http://www.studyabroad.com/consumer.html">Read Me</a></b><br>Important
-Consumer and Legal Information</font></p><p><font face="arial, helvetica">
+<hr width="75%">
 
-<font size="-1"><a href="http://www.studyabroad.com/legal.html">©Copyright</a>  1995-2001
-<a href="http://www.edudirectories.com/">Educational Directories Unlimited,
-Inc.</a><br><a href="http://www.studyabroad.com/privacy.html">Studyabroad.com Privacy
-Statement</a><br><a href="http://www.studyabroad.com/aboutstudyabroad.com.html">Contact
-Studyabroad.com</a></font></font></p></center><font face="arial, helvetica">
+  <p align="center"><font face="arial, helvetica, sans-serif" color="#3131CE"><b><a href="http://www.studyabroad.com/consumer.html">Read Me</a></b><br>Important Consumer and Legal Information</font></p><p><font face="arial, helvetica, sans-serif" color="#3131CE">
+
+<a href="http://www.studyabroad.com/legal.html"><font face="arial, helvetica, sans-serif" size="-1" color="#3131CE">©Copyright</font></a> <font face="arial, helvetica, sans-serif" size="-1" color="#3131CE"> 1995-2002</font>  <a href="http://www.edudirectories.com/"><font face="arial, helvetica, sans-serif" size="-1" color="#3131CE">Educational Directories Unlimited, Inc.</font></a><br><a href="http://www.studyabroad.com/privacy.html"><font face="arial, helvetica, sans-serif" size="-1" color="#3131CE">Studyabroad.com Privacy Statement</font></a><br><a href="http://www.studyabroad.com/aboutstudyabroad.com.html"><font face="arial, helvetica, sans-serif" size="-1" color="#3131CE">Contact Studyabroad.com</font></a></font></p></center>
 </font> 
 
 
-</font></body></html>
+
+</center></center></body></html>
