--- a/c/ca/car/cartooncritters.com.html
+++ b/c/ca/car/cartooncritters.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cartooncritters.com privacy policy that was archived on 2001-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011214111525id_/http%3A//cartooncritters.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cartooncritters.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604034944id_/http%3A//cartooncritters.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Cartoon Critters - coloring pages,learn to draw,online games</title>
@@ -18,7 +18,7 @@
 </p><p><img border="0" src="picimages/bookmarks/bd14710_.gif" width="725" height="10"></p></td></tr><!--msnavigation--></tbody></table><!--msnavigation--><table border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><!--msnavigation--><td valign="top">
 <h1 align="center">Privacy Policy Statement</h1>This is the web site 
 of <b>Cartoon Critters</b>.<br>
-<p>We can be reached via e-mail at <a href="mailto:href=&quot;mailto:crittermail@cartooncritters.com&quot;">crittermail@cartooncritters.com</a><br>
+<p>We can be reached via e-mail at <a href="mailto:href=&quot;mailto:crittermail@cartooncritters.com&quot;">webmaster@cartooncritters.com</a><br>
 </p><p>For each visitor to our Web page, our Web server automatically 
 recognizes only the consumer's IP address, but not the e-mail address.</p><p>The 
 information we collect is used for internal review and is then discarded, and used 
@@ -37,12 +37,15 @@ information regarding for which you provided us your telephone numbers.</p><p>Wi
 that are of interest to you, we have relationships with other companies that we 
 allow to place ads on our Web pages. As a result of your visit to our site, ad 
 server companies may collect information such as your domain type, your IP 
-address and clickstream information.&nbsp; For further information, consult the 
-privacy policies of:<br>
+address and clickstream information.</p><p>Ads on this site are served by
+Advertising.com <a href="http://www.advertising.com/privacy/privacy.html"> click here to see their privacy policy</a>.</p><p>Affiliates of
+cartooncritters.com:<br>
 <a href="http://www.amazon.com">
 www.amazon.com</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="http://www.prizegames.com">www.prizegames.com</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="http://www.cleverisland.com">www.clever Island.com</a>
+</p><p>visit their site&nbsp; to consult their 
+privacy policies.
 </p><p>We do not collect customer information.&nbsp; If our information practices change at some time in the 
 future we will post the policy changes to our Web site to notify you of these 
 changes and provide you with the ability to opt out of these new uses.&nbsp; If you 
