carreview.com (archived on 2002-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "vehicles",
  "char_count": 5088,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.73,
  "homepage_snapshot_redirected_domain": "carreview.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020329124259id_/http://carreview.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020329124259id_/http%3A//carreview.com",
  "interval": "2002_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "consumerreview.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020604050414id_/http%3A//www.consumerreview.com/privacy.asp",
  "policy_title": "Consumer Product Reviews - ConsumerREVIEW.com",
  "policy_url": "consumerreview.com/privacy.asp",
  "sha1": "abcd06ec06ee1460dc53e5a3a46d700a85d85af2",
  "simhash": 11878466922657839398,
  "simhash_updated": true,
  "site_hostname": "carreview.com",
  "site_url": "http://carreview.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20020604050414",
  "word_count": 804,
  "year": 2002
}

--- a/c/ca/car/carreview.com.html
+++ b/c/ca/car/carreview.com.html
@@ -1,61 +1,34 @@
-<!--The following is the downloaded HTML source of the carreview.com privacy policy that was archived on 2001-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011205115509id_/http%3A//www.consumerreview.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the carreview.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604050414id_/http%3A//www.consumerreview.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Consumer Product Reviews - ConsumerREVIEW.com</title>
+	<link rel="SHORTCUT ICON" href="/Cr-icon1.ico">
 <meta name="description" content="Product reviews and ratings written by consumers on product quality and best buys. Get top product recommendations or write your own reviews.">
-<meta name="keywords" content="consumer report, consumer, best buy, consumer digest, consumer guide, reviews, product review, shopping, car review, auto, camcorder review, camcorders, camera reviews, digital camera reviews, digital cameras, electronics, dvd player reviews, dvd, computer, computer hardware, videogame reviews, computer game reviews, sport, sport equipment, outdoor, appliance, baby">
+<meta name="keywords" content="consumer report, consumer, best buy, consumer digest, consumer guide, reviews, product review, shopping">
 </head>
-
+	
 <body bgcolor="White" alink="Red" text="Black">
 <table width="600" border="0" cellspacing="0" cellpadding="0" align="CENTER" valign="TOP">
 <!-- start top header -->
 <tbody><tr align="LEFT" valign="TOP">
-<td width="300" align="LEFT" valign="TOP"><img src="/images/130x32_cr.gif" width="130" height="32" border="0" alt=""></td>
-<td width="300" align="right" valign="bottom"><font face="verdana, arial, helvetica" size="1"><a href="/">Home</a>&nbsp;|&nbsp;<a href="/communities.asp">Our Communities</a></font></td>
+<td width="300" align="LEFT" valign="TOP"><a href="/"><img src="/images/200x50_cr2.gif" width="200" height="50" border="0" alt="Consumer Product Reviews"></a></td>
+<td width="300" align="right" valign="bottom"><font face="verdana, arial, helvetica" size="1"><a href="/communities.asp"><b>Our Communities</b></a></font>&nbsp;|&nbsp;<a href="/hotdeals/"><font face="verdana, arial, helvetica" color="red" size="1"><b>Hot Deals!</b></font></a></td>
 </tr>
 <!-- end top header -->
 <!-- start gap -->
 <tr align="LEFT" valign="TOP">
-<td colspan="2" align="LEFT" valign="TOP" bgcolor="#FFFFFF"><img alt="" border="0" height="4" src="/images/spacer.gif" width="1"></td>
+<td align="LEFT" colspan="2" valign="TOP" bgcolor="#FFFFFF"><img alt="" border="0" height="4" src="/images/spacer.gif" width="1"></td>
 </tr>
-<!-- end gap -->
-<!-- START SEARCH -->
-<!-- Atomz.com Search HTML for ConsumerREVIEW.com -->
-<tr align="LEFT" valign="TOP"><td colspan="2" bgcolor="#EEEECC"><img alt="" border="0" height="3" src="/images/spacer.gif" width="1"></td></tr>
-<form method="get" action="http://search.atomz.com/search/"></form>
-<tr align="LEFT" valign="TOP" bgcolor="#EEEECC">
-<td colspan="2" align="CENTER" valign="BOTTOM" nowrap="">
-<font face="verdana, arial, helvetica" size="1">&nbsp;&nbsp;<b>PRODUCT SEARCH:&nbsp;</b></font>
-<input size="15" name="sp-q">
-<input type="submit" value="Go">
-<input type="hidden" name="sp-a" value="00081690-sp00000000">
-</td>
-</tr>
-<tr align="LEFT" valign="TOP"><td colspan="2" bgcolor="#EEEECC"><img alt="" border="0" height="3" src="/images/spacer.gif" width="1"></td></tr>
-<!-- END SEARCH -->
-</tbody></table>
-<!-- START AD -->
-<table width="600" border="0" cellspacing="0" cellpadding="0" align="CENTER" valign="TOP">
-<tbody><tr align="LEFT" valign="TOP">
-<td align="LEFT" valign="TOP" bgcolor="#FFFFFF"><img alt="" border="0" height="8" src="/images/spacer.gif" width="1"></td>
-</tr>
-<tr align="left" valign="middle">
-<td width="600" align="center" valign="middle">
-<!-- Advertising Banner --><font face="Arial,Verdana" size="1">
-<script language="JavaScript" src="http://spinbox.consumerreview.com/?DC=consumerreview&amp;JS=Y&amp;RANDOM=" +="" math.round(math.random()="" *="" 100000000)="" "\"=""></script><noscript><A HREF="http://spinbox.consumerreview.com/?SHT=consumerreview">
-<IMG SRC="http://spinbox.consumerreview.com/?SIT=consumerreview&SC=Y"></A></noscript> </font>
-<!-- End Advertising Banner -->
-</td>
-</tr> 
 <tr align="LEFT" valign="TOP">
-<td align="LEFT" valign="TOP" bgcolor="#FFFFFF"><img alt="" border="0" height="8" src="/images/spacer.gif" width="1"></td>
+<td align="LEFT" colspan="2" valign="TOP" bgcolor="#000033"><img alt="" border="0" height="1" src="/images/spacer.gif" width="1"></td>
 </tr>
+<tr align="LEFT" valign="TOP">
+<td align="LEFT" colspan="2" valign="TOP" bgcolor="#CCCC00"><img alt="" border="0" height="3" src="/images/spacer.gif" width="1"></td>
+</tr>
+
+<!-- end gap -->
 </tbody></table>
-<!-- END AD -->
-
-
-
 <div align="center">
 <table width="600" cellspacing="0" cellpadding="0" align="center">
 <tbody><tr align="LEFT" valign="TOP">
@@ -142,16 +115,9 @@ This Privacy Policy does not cover the practices of companies that we do not own
 		<table border="0" cellpadding="2" cellspacing="0" width="600">
 			<tbody><tr>
 					<td align="center" valign="top" border="0">
-					<font face="verdana,arial,helvetica,swiss" size="1"><a href="/copyright.asp">Copyright ©1996-2001 ConsumerREVIEW, Inc. All Rights Reserved.</a><br>
+					<font face="verdana,arial,helvetica,swiss" size="1"><a href="/copyright.asp">Copyright ©1996-2002 ConsumerREVIEW, Inc. All Rights Reserved.</a><br>
 					<a href="/about/aboutus.asp">About Us</a> | <a href="/about/contactus.asp">Contact Us</a> | <a href="/terms.asp">Terms of Use</a> | <a href="/privacy.asp">Privacy Policy</a> | <a href="/partner/partnerservices.asp">Partner Services</a></font>
 					</td>
-			</tr>
-			<tr>
-					<td align="center" valign="top" border="0">
-					<font face="verdana,arial,helvetica" size="1">How are we doing? Send us your <a href="mailto: feedback@consumerreview.com">Feedback</a>.
-					</font></td>
-			</tr>
-			<tr><td align="right" valign="top" border="0"><a href="http://www.spidercache.com/"><img src="/images/spidercached_60.gif" width="109" height="40" border="0" alt=""></a></td>
 			</tr>		
 		</tbody></table>
 		<script language="JavaScript" src="http://www.consumerreview.com/shared/navigation.asp"></script>
