--- a/t/th/the/theabsolutesound.com.html
+++ b/t/th/the/theabsolutesound.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the theabsolutesound.com privacy policy that was archived on 2001-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011214142652id_/http%3A//theabsolutesound.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the theabsolutesound.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604050758id_/http%3A//www.theabsolutesound.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>The Absolute Sound: Privacy Policy</title>
@@ -82,7 +82,7 @@ document[name].src=graphic[i].src;
 <td><a href="index.html" onmouseover="onTabOver('HOME')" onmouseout="onTabOut('HOME')"><img src="images/nav_home.gif" width="48" height="18" alt="Home" border="0" name="HOME"></a></td>
 <td><a href="http://www.avguide.com/tas/current.html" onmouseover="onTabOver('CURR')" onmouseout="onTabOut('CURR')"><img src="images/nav_current.gif" width="85" height="18" alt="Current Issue" border="0" name="CURR"></a></td>
 <td><a href="subscriptions.html" onmouseover="onTabOver('SUBS')" onmouseout="onTabOut('SUBS')"><img src="images/nav_subs.gif" width="88" height="18" alt="Subscriptions" border="0" name="SUBS"></a></td>
-<td><a href="https://www.avguide.com/tas/backissues.html" onmouseover="onTabOver('BACK')" onmouseout="onTabOut('BACK')"><img src="images/nav_backiss.gif" width="78" height="18" alt="Back Issues" border="0" name="BACK"></a></td>
+<td><a href="https://www.avguide.com/tas/backissues.jsp" onmouseover="onTabOver('BACK')" onmouseout="onTabOut('BACK')"><img src="images/nav_backiss.gif" width="78" height="18" alt="Back Issues" border="0" name="BACK"></a></td>
 <td><a href="reviews.html" onmouseover="onTabOver('REVIEWS')" onmouseout="onTabOut('REVIEWS')"><img src="images/nav_reviews.gif" width="59" height="18" alt="Reviews" border="0" name="REVIEWS"></a></td>
 <td><a href="contact.html" onmouseover="onTabOver('CONT')" onmouseout="onTabOut('CONT')"><img src="images/nav_contact.gif" width="74" height="18" alt="Contact Us" border="0" name="CONT"></a></td>
 <td><a href="about.html" onmouseover="onTabOver('ABOUT')" onmouseout="onTabOut('ABOUT')"><img src="images/nav_about.gif" width="66" height="18" alt="About Us" border="0" name="ABOUT"></a></td>
@@ -169,7 +169,7 @@ If you have questions about your privacy on our site, please contact our
 <p align="CENTER" class="foot"><a href="index.html" class="foot">Home</a> | 
 <a href="http://www.avguide.com/tas/current.html" class="foot">Current Issue</a> | 
 <a href="subscriptions.html" class="foot">Subscriptions</a> | 
-<a href="https://www.avguide.com/tas/backissues.html" class="foot">Back Issues</a> | 
+<a href="https://www.avguide.com/tas/backissues.jsp" class="foot">Back Issues</a> | 
 <a href="reviews.html" class="foot">Reviews</a> | 
 <a href="contact.html" class="foot">Contact Us</a> | 
 <a href="about.html" class="foot">About Us</a></p><br>
@@ -317,7 +317,7 @@ document.write('<A TARGET="_blank" HREF="http://www.webtrendslive.com/redirect.a
 document.write('<IMG BORDER="0" WIDTH="1" HEIGHT="1" SRC="http://statse.webtrendslive.com/S005-01-8-23-272674-98871/button3.asp?'+W+'">');
 document.write('</A>');
 //-->
-</script><a target="_blank" href="http://www.webtrendslive.com/redirect.asp?siteID=98871"><img border="0" width="1" height="1" src="http://statse.webtrendslive.com/S005-01-8-23-272674-98871/button3.asp?tagver=3&amp;SiteId=98871&amp;Sid=005-01-8-23-272674-98871&amp;Tz=-600&amp;firstwkday=sunday&amp;Edition=enterprise&amp;Button=&amp;server=&amp;order=&amp;Group=&amp;browserDate=Wed%20Feb%2019%202020%2021%3A36%3A48%20GMT+0000%20%28Coordinated%20Universal%20Time%29&amp;title=The%20Absolute%20Sound%3A%20Privacy%20Policy&amp;url=https%3A//web.archive.org/web/20011214142652id_/http%253A//theabsolutesound.com/privacy.html&amp;referrer=&amp;appname=Netscape&amp;appversion=5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36&amp;cookieOK=Yes&amp;userLanguage=en-US&amp;platform=Linux x86_64&amp;bgColor=&amp;javaOK=Yes&amp;screenResolution=800x600&amp;colorDepth=24&amp;NSpluginList="></a>
+</script><a target="_blank" href="http://www.webtrendslive.com/redirect.asp?siteID=98871"><img border="0" width="1" height="1" src="http://statse.webtrendslive.com/S005-01-8-23-272674-98871/button3.asp?tagver=3&amp;SiteId=98871&amp;Sid=005-01-8-23-272674-98871&amp;Tz=-600&amp;firstwkday=sunday&amp;Edition=enterprise&amp;Button=&amp;server=&amp;order=&amp;Group=&amp;browserDate=Wed%20Feb%2019%202020%2021%3A36%3A49%20GMT+0000%20%28Coordinated%20Universal%20Time%29&amp;title=The%20Absolute%20Sound%3A%20Privacy%20Policy&amp;url=https%3A//web.archive.org/web/20020604050758id_/http%253A//www.theabsolutesound.com/privacy.html&amp;referrer=&amp;appname=Netscape&amp;appversion=5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36&amp;cookieOK=Yes&amp;userLanguage=en-US&amp;platform=Linux x86_64&amp;bgColor=&amp;javaOK=Yes&amp;screenResolution=800x600&amp;colorDepth=24&amp;NSpluginList="></a>
 
 <noscript>
 <A TARGET="_blank" HREF="http://www.webtrendslive.com/redirect.asp?siteID=98871">
