--- a/s/so/sol/sologig.com.html
+++ b/s/so/sol/sologig.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sologig.com privacy policy that was archived on 2001-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011219025655id_/http%3A//sologig.com/noncore/Privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sologig.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604051220id_/http%3A//www.sologig.com/noncore/Privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Sologig.com | Privacy</title>
@@ -17,9 +17,9 @@
 		<td>
 			<!--First part of the Tag for banner ad starts here-->
 			<nolayer><br>
-				<iframe src="http://ad.doubleclick.net/adi/sologig.headhunter.dart/main;p=main;pos=top2;sz=468x60;tile=2;ord=9777033?" width="468" height="60" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><BR>
-					<A HREF="http://ad.doubleclick.net/jump/sologig.headhunter.dart/main;abr=!ie;p=main;pos=top2;sz=468x60;tile=2;ord=9777033?">
-						<IMG SRC="http://ad.doubleclick.net/ad/sologig.headhunter.dart/main;abr=!ie;p=main;pos=top2;sz=468x60;tile=2;ord=9777033?" border=0 height="60" width="468">
+				<iframe src="http://ad.doubleclick.net/adi/sologig.hhnt/main;p=main;pos=top2;sz=468x60;tile=2;ord=7003137?" width="468" height="60" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"><BR>
+					<A HREF="http://ad.doubleclick.net/jump/sologig.hhnt/main;abr=!ie;p=main;pos=top2;sz=468x60;tile=2;ord=7003137?">
+						<IMG SRC="http://ad.doubleclick.net/ad/sologig.hhnt/main;abr=!ie;p=main;pos=top2;sz=468x60;tile=2;ord=7003137?" border=0 height="60" width="468">
 					</A><BR>
 				</iframe><br>
 			</nolayer>
@@ -248,7 +248,7 @@ access to the user's information while they are away from their computer. <br></
 <!-- ===| END BOTTOM NAV TABLE |=== -->
 <br>&nbsp;
 <!--Second part of the Tag for banner ad starts here-->
-<layer src="http://ad.doubleclick.net/adl/sologig.headhunter.dart/main;p=main;pos=top2;sz=468x60;tile=2;ord=41471900993272870?" width="468" height="60" visibility="hidden" onload="moveToAbsolute(layer2.pageX,layer2.pageY);clip.height=60;clip.width=468;visibility='show';"></layer>
+<layer src="http://ad.doubleclick.net/adl/sologig.hhnt/main;p=main;pos=top2;sz=468x60;tile=2;ord=41471900993272870?" width="468" height="60" visibility="hidden" onload="moveToAbsolute(layer2.pageX,layer2.pageY);clip.height=60;clip.width=468;visibility='show';"></layer>
 <!--Second part of the Tag for banner ad ends here-->
 
 </body></html>
